k8s/auth-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
spec:
  type: LoadBalancer
  selector:
    app: auth-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
